# autotroll

./: Makefile.am  NEWS  README  README.md  THANKS  bootstrap  configure.ac
build-aux/: autotroll.m4  autotroll.mk  qscintilla2.m4
gui/: Makefile.am  lcdrange.cpp  lcdrange.h
src/: Makefile.am
tests/: Makefile.am  test.sh  testme.cc
