# Program to check:
# check_PROGRAMS = test1
# test1_SOURCES = test1.c

# If your test programs includes header from the source tree:
# AM_CXXFLAGS += -I $(top_srcdir)/src
# Use AM_CFLAGS for C code. Don't play with CXXFLAGS/CFLAGS.

# If your test programs needs to link with some library from the source tree:
# LDADD = $(top_builddir)/src/libfoo.la

# List your tests here:
# TESTS = test1

# List the tests that are failing:
# XFAIL_TESTS =
